# movie-recommendation-system

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/movie_recommender/: __init__.py  app.py  chroma.py  ingest.py
tests/: conftest.py  test_app.py  test_chroma.py  test_ingest.py
