[project]
name = "movie-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "gradio>=6.13.0",
    "kagglehub>=1.0.1",
    "pandas>=3.0.2",
    "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
