[project]
name = "movie-recommendation-system"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "gradio>=6.13.0",
    "kagglehub>=1.0.1",
    "pandas>=3.0.2",
    "fastembed>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true
log_level = "INFO"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
